objects/ContentPage__c.object
<CustomObject>
    <fields>
        <fullName>ActualUrl__c</fullName>
        <label>Actual Url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentPage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Page</label>
        <referenceTo>ContentPage__c</referenceTo>
        <relationshipName>ContentPages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether this content is public. Non-public pages need authorization.</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VirtualPath__c</fullName>
        <externalId>true</externalId>
        <label>Virtual Path</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Partner Portal Page</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Portal Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>